--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 75vh;
     position: relative;
+    overflow-x: hidden;
   }
 
 .directional {
@@ -42,6 +43,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 /* Each slide covers the entire section */
@@ -268,3 +270,4 @@
   flex-direction: column;
   gap: 0.6rem;
 }
+
